syntax = "proto3";
package elements;
option csharp_namespace = "Application.Protos.Elements";

import "google/protobuf/timestamp.proto";
import "elements/ink_stroke_element.proto";

// Base message definition
message Element {
	string id = 1;
	string book_id = 2;
	string page_id = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp updated_at = 5;
	oneof element {
		InkStrokeElement ink_stroke = 6;
	}
}